native/wdsp/wdsp.h

#define INREAL    float
#define OUTREAL   float
//
// Interfaces from TXA.c
//

extern void SetTXAMode (int channel, int mode);
extern void SetTXABandpassFreqs (int channel, double f_low, double f_high);
extern void TXASetNC (int channel, int nc);
//
// Interfaces from ammod.c
//

extern void SetTXAAMCarrierLevel (int channel, double c_level);
extern void SetCalibration (  int disp,
                              int set_num,
                              int n_points,
                              double (*cal)[dMAX_M + 1]
                           );
extern void SetTXABandpassRun (int channel, int run);
extern void SetTXABandpassWindow (int channel, int wintype);
extern void SetTXABandpassNC (int channel, int nc);
extern void SetTXABandpassMP (int channel, int mp);
//
// Interfaces from channel.c
//

extern void OpenChannel (int channel, int in_size, int dsp_size, int input_samplerate, int dsp_rate,
                         int output_samplerate,
                         int type, int state, double tdelayup, double tslewup, double tdelaydown, double tslewdown, int bfo);
extern int SetChannelState (int channel, int state, int dmode);
//
// Interfaces from dexp.c
//

extern void create_dexp (int id, int run_dexp, int size, double* in, double* out, int rate, double dettau,
                         double tattack, double tdecay,
                         double thold, double exp_ratio, double hyst_ratio, double attack_thresh, int nc, int wtype, double lowcut,
                         double highcut,
                         int run_filt, int run_vox, int run_audelay, double audelay, void (__stdcall *pushvox)(int id, int active),
                         int antivox_run, int antivox_size, int antivox_rate, double antivox_gain, double antivox_tau);
extern void SendCBPushDexpVox (int id, void (__stdcall *pushvox)(int id, int active));
//
// Interfaces from iobuffs.c
//

extern void fexchange0 (int channel, double* in, double* out, int* error);
extern void fexchange2 (int channel, INREAL *Iin, INREAL *Qin, OUTREAL *Iout, OUTREAL *Qout, int* error);
//
// Interfaces from nbp.c
//

extern int RXANBPAddNotch (int channel, int notch, double fcenter, double fwidth, int active);
extern int RXANBPDeleteNotch (int channel, int notch);
extern void RXANBPGetNumNotches (int channel, int* nnotches);
extern void RXANBPSetTuneFrequency (int channel, double tunefreq);
extern void RXANBPSetNotchesRun (int channel, int run);
extern void create_anbEXT (
  int id,
  int run,
  int buffsize,
  double samplerate,
  double tau,
  double hangtime,
  double advtime,
  double backtau,
  double threshold
);
extern void destroy_anbEXT (int id);
extern void flush_anbEXT (int id);
extern void xanbEXT (int id, double* in, double* out);
extern void SetEXTANBRun (int id, int run);
extern void SetEXTANBBuffsize (int id, int size);
extern void SetEXTANBSamplerate (int id, int rate);
extern void SetEXTANBTau (int id, double tau);
extern void SetEXTANBHangtime (int id, double time);
extern void SetEXTANBAdvtime (int id, double time);
extern void SetEXTANBBacktau (int id, double tau);
extern void SetEXTANBThreshold (int id, double thresh);
extern void create_nobEXT (
  int id,
  int run,
  int mode,
  int buffsize,
  double samplerate,
  double slewtime,
  double hangtime,
  double advtime,
  double backtau,
  double threshold
);
extern void destroy_nobEXT (int id);
extern void flush_nobEXT (int id);
extern void xnobEXT (int id, double* in, double* out);
extern void SetEXTNOBRun (int id, int run);
extern void SetEXTNOBMode (int id, int mode);
extern void SetEXTNOBBuffsize (int id, int size);
extern void SetEXTNOBSamplerate (int id, int rate);
extern void SetEXTNOBTau (int id, double tau);
extern void SetEXTNOBHangtime (int id, double time);
extern void SetEXTNOBAdvtime (int id, double time);
extern void SetEXTNOBBacktau (int id, double tau);
extern void SetEXTNOBThreshold (int id, double thresh);
extern int RNNRloadModel(const char* file_path);
extern int RNNRmodelLoaded(void);
extern void SetRXARNNRPosition(int channel, int position);
//
// Interfaces from snb.c
//

extern void SetRXASNBARun (int channel, int run) ;
extern void SetRXANNRAlpha (int channel, double alpha);
extern void SetRXANNRAlphaKnee (int channel, double knee_db);
extern void SetRXANNRMaskFloor (int channel, double floor_db);
extern void SetRXANNRMaxGain (int channel, double gmax_db);
extern int SetRXANNRModel (int channel, int slot);
extern void SetRXANNRPosition (int channel, int position);
extern void SetRXANNRRun (int channel, int setit);
extern void SetRXANNRSmooth (int channel, double att_ms, double rel_ms);
extern void SetRXANNRTau (int channel, double tau);