Zeus.Dsp/Wdsp/NativeMethods.cs


    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXARNNRPosition(int channel, int position);

    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RNNRloadModel(string filePath);

    // Additive query (paired with RNNRloadModel): returns 1 when a custom RNNR
    // model is currently loaded, 0 otherwise. Absent on older libwdsp builds, so
    // callers must guard EntryPointNotFoundException and fall back. Lets the
    // managed side tell a successful model load from a parse/architecture failure.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int RNNRmodelLoaded();

    // NNR — neural noise reduction added upstream in WDSP 2.10.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXANNRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXANNRPosition(int channel, int position);

    [LibraryImport(LibraryName)] [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SetRXANNRModel(int channel, int slot);
    [LibraryImport(LibraryName)] [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXANNRMaskFloor(int channel, double floorDb);
    [LibraryImport(LibraryName)] [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXANNRAlpha(int channel, double alpha);
    [LibraryImport(LibraryName)] [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXANNRAlphaKnee(int channel, double kneeDb);
    [LibraryImport(LibraryName)] [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXANNRTau(int channel, double tauSeconds);
    [LibraryImport(LibraryName)] [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXANNRMaxGain(int channel, double maxGainDb);
    [LibraryImport(LibraryName)] [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXANNRSmooth(int channel, double attackMs, double releaseMs);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASNBARun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXANBPSetNotchesRun(int channel, int run);

    // Manual notch filter (MNF) database — nbp.c:343-468. Notch fcenter/fwidth
    // are ABSOLUTE RF Hz; WDSP positions them relative to the tuned frequency
    // (RXANBPSetTuneFrequency) so they stay put as the radio tunes. Thetis
    // dsp.cs:703-738 drives the same set. The notchdb is per-RXA-channel.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int RXANBPAddNotch(int channel, int notch, double fcenter, double fwidth, int active);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int RXANBPDeleteNotch(int channel, int notch);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXANBPGetNumNotches(int channel, ref int nnotches);

    // Absolute tuned (LO) frequency in Hz — recomputes notch coefficients so
    // notches hold their RF position across a retune. Called on every LO move.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXANBPSetTuneFrequency(int channel, double tunefreq);

    // NB1 (EXTANB) — pre-RXA time-domain noise blanker. Setters dereference
    // panb[id] so create_anbEXT MUST be called before any SetEXTANB*/xanbEXT.
    // Buffsize is complex samples (matches WDSP InSize), not doubles.
    [LibraryImport(LibraryName, EntryPoint = "create_anbEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CreateAnbEXT(
        int id,
        int run,
        int buffsize,
        double samplerate,
        double tau,
        double hangtime,
        double advtime,
        double backtau,
        double threshold);

    [LibraryImport(LibraryName, EntryPoint = "destroy_anbEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void DestroyAnbEXT(int id);

    [LibraryImport(LibraryName, EntryPoint = "flush_anbEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void FlushAnbEXT(int id);

    [LibraryImport(LibraryName, EntryPoint = "xanbEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void XanbEXT(int id, ref double @in, ref double @out);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBRun(int id, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBBuffsize(int id, int size);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBSamplerate(int id, int rate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBTau(int id, double tau);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBHangtime(int id, double time);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBAdvtime(int id, double time);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBBacktau(int id, double tau);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTANBThreshold(int id, double thresh);

    // NB2 (EXTNOB) — pre-RXA impulse-sequence blanker. Same ordering rule as
    // EXTANB: create_nobEXT before any SetEXTNOB*/xnobEXT. create_nobEXT's
    // `slewtime` parameter is applied to both adv_slewtime and hang_slewtime
    // inside wdsp (see nobII.c:636-637).
    [LibraryImport(LibraryName, EntryPoint = "create_nobEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CreateNobEXT(
        int id,
        int run,
        int mode,
        int buffsize,
        double samplerate,
        double slewtime,
        double hangtime,
        double advtime,
        double backtau,
        double threshold);

    [LibraryImport(LibraryName, EntryPoint = "destroy_nobEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void DestroyNobEXT(int id);

    [LibraryImport(LibraryName, EntryPoint = "flush_nobEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void FlushNobEXT(int id);

    [LibraryImport(LibraryName, EntryPoint = "xnobEXT")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void XnobEXT(int id, ref double @in, ref double @out);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBRun(int id, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBMode(int id, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBBuffsize(int id, int size);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBSamplerate(int id, int rate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBTau(int id, double tau);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBHangtime(int id, double time);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBAdvtime(int id, double time);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBBacktau(int id, double tau);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetEXTNOBThreshold(int id, double thresh);

    // =================================================================
    // TX bindings — mirror of the RXA subset. TXA is WDSP channel type=1
    // (RXA is type=0) per OpenChannel's `type` param. SetChannelState is
    // channel-generic: state 1=on / 0=off, dmp 1=damp buffers on transition.
    // =================================================================

    // channel.h:82 — returns previous state (int). We usually ignore the return.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SetChannelState(int channel, int state, int dmp);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAAMCarrierLevel(int channel, double c_level);

    // fexchange2 (iobuffs.h:91) — TX-side frame exchange. Iin carries mono mic
    // samples, Qin stays silent, Iout/Qout receive modulated I/Q for the P1 EP2
    // outbound packer. INREAL/OUTREAL are `float` (wdsp.h:7-8) — NOT `double`
    // like fexchange0's interleaved buffers.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void fexchange2(
        int channel,
        ref float Iin,
        ref float Qin,
        ref float Iout,
        ref float Qout,
        out int error);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAMode(int channel, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXABandpassFreqs(int channel, double f_low, double f_high);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXABandpassRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXABandpassWindow(int channel, int wintype);

    // TX bandpass resolution. This updates bp0/bp1/bp2, the three filters that
    // enforce the operator's TX passband. Deliberately do not use TXASetNC:
    // that collective also gives the unrelated P2 CIC-correction FIR the same
    // huge coefficient count, whose frequency-sampling design is O(N^2).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXABandpassNC(int channel, int nc);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXABandpassMP(int channel, int mp);
